--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ body {
 header {
     background-color: lightcoral;
 }
+
+h1 {
+    font-family: 'oswald', sans-serif;
+}
 /* Main */
 main {
     background-color: lightblue;
