--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,3 +130,12 @@ footer {
         margin-top: 79px;
     }
 }
+
+/* Media query for laptops and above 992px */
+
+@media screen and (min-width: 992px) {
+
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
