--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,8 +91,18 @@ main {
 }
 
 /* Footer */
-footer {
-    background-color: orange;
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 }
 
 /* Media query tablet and larger (768px and up)*/
@@ -135,7 +145,7 @@ footer {
 
 @media screen and (min-width: 992px) {
 
-    #menu a:hover {
+    #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
 }
