--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ main {
 }
 
 #cover-text {   
-    /* Final rgba value ets the opacity so it is semi transparent*/
+    /* Final rgba value sets the opacity so it is semi transparent*/
     background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
     position: absolute;
@@ -112,6 +112,35 @@ main {
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 }
+
+/* Reasons section */
+
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-phyiscal > div,
+#benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
 
 /* Footer */
 #social-networks {
