--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,19 @@ main {
     align-items: center;
     justify-content: center;
 }
+/*  Meet up times section */
+#times {
+    background: url(../images/dublin-city.webp) no-repeat center / cover;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times > div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+}
 
 /* Footer */
 #social-networks {
