--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,15 @@ main {
     color: #3a3a3a;
 }
 
+/* media query for landscape phones and screens 576px and up*/
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -270,12 +279,20 @@ main {
         align-self: flex-end;
     }
 
+    #photos {
+        column-count: 3;
+    }
+
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    #photos {
+        column-count: 4;
     }
 }
 
