--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -55,7 +53,7 @@ header a {
     list-style-type: none;
 }
 
-#menu>li {
+#menu > li {
     margin-bottom: 1em;
 }
 
@@ -90,9 +88,11 @@ nav {
 
 /* Main content */
 main {
-    /* Make main element take up any surplus space to push footer down */
+    /* Enlarge main element to push footer down*/
     flex: 1 0 auto;
+    /* Add margin at the top to prevent content from being covered by the header */
     margin-top: 47px;
+    /* Enable flex properties for child elements */
     display: flex;
     flex-direction: column;
 }
@@ -117,8 +117,7 @@ main {
     padding-left: 10px;
 }
 
-#cover-text>h2,
-#cover-text>h3 {
+#cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 }
 
@@ -134,8 +133,8 @@ main {
     font-size: 280%;
 }
 
-#benefits-physical>div,
-#benefits-mental>div {
+#benefits-physical > div,
+#benefits-mental > div {
     line-height: 20px;
     margin-bottom: 20px;
 }
@@ -165,9 +164,11 @@ main {
     align-items: center;
     justify-content: center;
 }
-/*  Meet up times section */
+
+/* Meetup Times section */
 #times {
-    background: url(../images/dublin-city.webp) no-repeat center / cover;
+    background: url('../images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
     display: flex;
     flex-wrap: wrap;
 }
@@ -177,17 +178,20 @@ main {
     background-color: rgba(0, 0, 0, .6);
     padding: 15px;
     text-align: center;
-    /* Stop divs wrapping on screens under 400px*/
+    /* This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its row */
     flex-basis: 200px;
     flex-grow: 1;
+    /* Creates a grid of meetup time dives over the background image */
     border: 2px solid white;
 }
 
 #times h3 {
+    /* Override the heading colour set in general styles */
     color: #fafafa;
 }
 
-/* Gallery html page */
+/* Gallery page */
 #photos img {
     width: 100%;
     line-height: 1em;
@@ -197,26 +201,28 @@ main {
     line-height: 0;
 }
 
-/*  Sign up page */
-
+/* Form */
 #signup {
-    background: url(../images/signup-image.webp);
+    background-image: url("../images/signup-image.webp");
     background-size: cover;
     background-position: 75%;
     padding: 20px 10% 0 10%;
     flex-grow: 1;
 }
 
+
 #signup-form {
     color: #ffffff;
-    background-color: rgba(60,60,60, 0.6);
+    background-color: rgba(60, 60, 60, 0.6);
     padding: 30px;
 }
 
-#signup-form > h2 {
+
+#signup-form>h2 {
     color: #fafafa;
     margin-bottom: 20px;
 }
+
 
 .text-input {
     background: transparent;
@@ -229,11 +235,13 @@ main {
     padding: 0 5px;
 }
 
+
 .radio-buttons {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
+
 
 .join-button {
     margin-top: 20px;
@@ -259,7 +267,7 @@ main {
     color: #3a3a3a;
 }
 
-/* media query for landscape phones and screens 576px and up*/
+/* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
     #photos {
         column-count: 2;
@@ -267,10 +275,8 @@ main {
     }
 }
 
-
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
-
     /* Header */
     nav {
         display: block;
@@ -284,7 +290,7 @@ main {
         display: flex;
     }
 
-    #menu>li {
+    #menu > li {
         padding-left: 1rem;
     }
 
@@ -318,21 +324,22 @@ main {
         width: 100%;
     }
 
-    #benefits-physical>div,
-    #benefits-mental>div {
+    #benefits-physical > div,
+    #benefits-mental > div {
         width: 75%;
     }
 
-    #benefits-mental>div {
+    #benefits-mental > div {
         text-align: end;
         align-self: flex-end;
     }
 
+    /* Gallery */
     #photos {
         column-count: 3;
     }
-    /* Signup form*/
 
+    /* Form */
     #signup {
         background-position: center;
         position: relative;
@@ -357,10 +364,11 @@ main {
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover {
+    #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
 
+    /* Gallery */
     #photos {
         column-count: 4;
     }
